[gd_scene load_steps=6 format=3 uid="uid://la3al4wownf8"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_3nl1r"]
[ext_resource type="Texture2D" uid="uid://bfkmtiguov1pm" path="res://Assets/Sprites/Characters/player.png" id="2_acmou"]
[ext_resource type="AudioStream" uid="uid://c2lgr2wri37ig" path="res://Sounds/SoundEffects/laughs-6112.mp3" id="3_jdrx5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xfrij"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0wtxk"]
size = Vector3(1.03992, 1.17554, 1)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 57
script = ExtResource("1_3nl1r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_xfrij")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.07, 0, 0, 0, 0.07, 0, 0, 0, 0.07, 0, 0, 0)
texture = ExtResource("2_acmou")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.92635)
light_energy = 6.0
spot_angle = 28.9831

[node name="HurtBox" type="Area3D" parent="." groups=["Player"]]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0127563, 0.0684814, 0)
shape = SubResource("BoxShape3D_0wtxk")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="PlayerHurt" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_jdrx5")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
